# ecs-disk-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
daemon/dbus/: Cargo.toml
daemon/dbus/src/: dbus_helper.rs  lib.rs  main.rs
daemon/dbus/src/methods/: mod.rs
examples/: lsdm.rs
members/cryptsetup/: Cargo.toml
members/cryptsetup/examples/: cryptinfo.rs
members/cryptsetup/src/: crypt_type.rs  lib.rs
members/cryptsetup/sys/: Cargo.toml  build.rs
members/disk-ops/: Cargo.toml
members/disk-ops/examples/: rspart.rs
members/disk-ops/src/: lib.rs
members/disk-ops/src/table/: gpt.rs  mod.rs
members/disk-prober/: Cargo.toml
members/disk-prober/examples/: prober.rs
members/disk-prober/src/: block.rs  lib.rs  partitions.rs
members/disk-types/: Cargo.toml
members/disk-types/src/: device.rs  fs.rs  lib.rs  luks.rs  lvm.rs  partitions.rs  sector.rs
members/lvmdbus1/: Cargo.toml
members/lvmdbus1/examples/: lvminfo.rs  lvrename.rs
members/lvmdbus1/src/: lib.rs  lv.rs  main.rs  manager.rs  pv.rs  vg.rs
members/prober/: Cargo.toml
members/prober/examples/: prober.rs
members/types/src/: lib.rs
prober/: Cargo.toml
prober/blkid/: Cargo.toml  LICENSE  README.md
prober/blkid/src/: cache.rs  dev.rs  errors.rs  lib.rs  part_list.rs  partition.rs  probe.rs  table.rs  tag.rs  topology.rs
prober/blkid/sys/: Cargo.toml  build.rs
prober/blkid/sys/src/: lib.rs
prober/examples/: prober.rs
prober/src/: lib.rs  partitions.rs
src/: builder.rs  common.rs  entity.rs  lib.rs  main.rs
src/ops/: create.rs  info.rs  luks.rs  mod.rs  modify.rs
src/systems/: apply.rs  common.rs  create.rs  format.rs  label.rs  mod.rs  modification.rs  remove.rs  resize.rs  scan.rs
src/tests/: mod.rs
types/: Cargo.toml
types/src/: fs.rs  lib.rs  partitions.rs  sector.rs
