[package]
name = "ecs-disk-manager"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[workspace]
members = [
	"members/cryptsetup",
	"members/cryptsetup/sys",
	"members/lvmdbus1",
	"members/prober",
	"members/types"
]

[dependencies]
disk-prober = { path = "members/prober" }
disk-types = { path = "members/types" }
slotmap = "0.3.0"
secstr = "0.3.2"
