[package]
name = "ecs-disk-manager"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

[workspace]
members = [
	"members/cryptsetup",
	"members/cryptsetup/sys",
	"members/lvmdbus1",
	"members/disk-ops",
	"members/disk-prober",
	"members/disk-types",
]

[dependencies]
cryptsetup = { path = "members/cryptsetup" }
disk-ops = { path = "members/disk-ops" }
disk-prober = { path = "members/disk-prober" }
disk-types = { path = "members/disk-types" }
lvmdbus1 = { path = "members/lvmdbus1" }
slotmap = "0.3.0"
secstr = "0.3.2"
rayon = "1.0.3"
