[package]
name = "ecs-disk-manager"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "Apache-2.0/MIT"

[workspace]
members = [
	"daemon/dbus",
	"members/cryptsetup",
	"members/cryptsetup/sys",
	"members/lvmdbus1",
	"members/disk-ops",
	"members/disk-prober",
	"members/disk-types",
]

[dependencies]
cryptsetup = { path = "members/cryptsetup" }
disk-ops = { path = "members/disk-ops" }
disk-prober = { path = "members/disk-prober" }
disk-types = { path = "members/disk-types" }
lvmdbus1 = { path = "members/lvmdbus1" }
slotmap = "0.3.0"
secstr = "0.3.2"
rayon = "1.1.0"
err-derive = "0.1.5"
bitflags = "1.1.0"
shrinkwraprs = "0.2.1"
