[package]
name = "blkid"
version = "0.2.1"
description = "Safe blkid-sys wrapper"
documentation = "https://docs.rs/blkid"
repository = "https://github.com/cholcombe973/blkid"
license = "MIT"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
categories = ["api-bindings"]

[dependencies]
libc = "^0.2"
err-derive = "0.1.5"
blkid-sys = { path = "./sys" }

